:relaxed:
1. 调整启动脚本